// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-input-date Should display error with invalid value, case value="31-12-2022" 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should display error with invalid value, case value="31-12-2022" 2`] = `
<mg-input-date value="31-12-2022">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date mg-c-input--has-error">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text identifier-error" aria-invalid="true" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date" value="31-12-2022">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <div id="identifier-error" slot="error">
        The date format must be
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should display error with invalid value, case value="2020" 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should display error with invalid value, case value="2020" 2`] = `
<mg-input-date value="2020">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date mg-c-input--has-error">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text identifier-error" aria-invalid="true" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date" value="2020">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <div id="identifier-error" slot="error">
        The date format must be
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should display error with invalid value, case value="2021" 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should display error with invalid value, case value="2021" 2`] = `
<mg-input-date value="2021">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date mg-c-input--has-error">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text identifier-error" aria-invalid="true" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date" value="2021">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <div id="identifier-error" slot="error">
        The date format must be
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should display error with invalid value, case value="2022-02-24T08:01:44.460Z" 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should display error with invalid value, case value="2022-02-24T08:01:44.460Z" 2`] = `
<mg-input-date value="2022-02-24T08:01:44.460Z">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date mg-c-input--has-error">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text identifier-error" aria-invalid="true" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date" value="2022-02-24T08:01:44.460Z">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <div id="identifier-error" slot="error">
        The date format must be
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should override Backspace keyboard event 1`] = `
<mg-input-date value="2021-10-14">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date" value="2021-10-14">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should override Delete keyboard event 1`] = `
<mg-input-date value="2021-10-14">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date" value="2021-10-14">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should override keyboard event even if display error 1`] = `
<mg-input-date value="20212-10-14">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date mg-c-input--has-error">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text identifier-error" aria-invalid="true" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date" value="20212-10-14">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <div id="identifier-error" slot="error">
        The date format must be
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should override keyboard event even if display error 2`] = `
<mg-input-date value="">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date" value="">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args {
  label: 'label',
  identifier: 'identifier',
  helpText: 'My help text use pattern {pattern} for date: {date}. {defaultHelpText}'
}: 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date">
      <div id="identifier-help-text" slot="help-text">
        My help text use pattern
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        for date: 12/24/2023. Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args {
  label: 'label',
  identifier: 'identifier',
  readonly: true,
  labelOnTop: true,
  tooltip: 'Tooltip message'
}: 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date mg-c-input--label-on-top mg-c-input--readonly">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <b></b>
      <mg-input-title identifier="identifier" is-legend="false" readonly="true" required="false" slot="label">
        <!---->
        <span class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </span>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args {
  label: 'label',
  identifier: 'identifier',
  readonly: true,
  value: '2022-06-02'
}: 1`] = `
<mg-input-date value="2022-06-02">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date mg-c-input--readonly">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <b>
        6/2/2022
      </b>
      <mg-input-title identifier="identifier" is-legend="false" readonly="true" required="false" slot="label">
        <!---->
        <span class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </span>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args {
  label: 'label',
  identifier: 'identifier',
  readonly: true,
  value: '2022-06-02',
  lang: 'fr'
}: 1`] = `
<mg-input-date lang="fr" value="2022-06-02">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date mg-c-input--readonly">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <b>
        02/06/2022
      </b>
      <mg-input-title identifier="identifier" is-legend="false" readonly="true" required="false" slot="label">
        <!---->
        <span class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </span>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args {
  label: 'label',
  identifier: 'identifier',
  readonly: true,
  value: '2022-06-02',
  lang: 'xx'
}: 1`] = `
<mg-input-date lang="xx" value="2022-06-02">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date mg-c-input--readonly">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <b>
        6/2/2022
      </b>
      <mg-input-title identifier="identifier" is-legend="false" readonly="true" required="false" slot="label">
        <!---->
        <span class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </span>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args {
  label: 'label',
  identifier: 'identifier',
  required: true,
  disabled: true,
  value: '2022-06-02',
  helpText: 'My help text'
}: 1`] = `
<mg-input-date value="2022-06-02">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date mg-c-input--disabled">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" disabled="" id="identifier" max="9999-12-31" name="identifier" required="" type="date" value="2022-06-02">
      <div id="identifier-help-text" slot="help-text">
        My help text
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args {
  label: 'label',
  identifier: 'identifier',
  required: true,
  readonly: true,
  value: '2022-06-02',
  helpText: 'My help text'
}: 1`] = `
<mg-input-date value="2022-06-02">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date mg-c-input--readonly">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <b>
        6/2/2022
      </b>
      <mg-input-title identifier="identifier" is-legend="false" readonly="true" required="true" slot="label">
        <!---->
        <span class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </span>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args {
  label: 'label',
  identifier: 'identifier',
  required: true,
  value: '2022-06-02',
  helpText: 'My help text'
}: 1`] = `
<mg-input-date value="2022-06-02">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" required="" type="date" value="2022-06-02">
      <div id="identifier-help-text" slot="help-text">
        My help text
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args {
  label: 'label',
  identifier: 'identifier',
  tooltip: 'My Tooltip Message'
}: 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
            <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
              <mg-icon icon="info-circle"></mg-icon>
            </mg-tooltip>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args {
  label: 'label',
  identifier: 'identifier',
  tooltip: 'My Tooltip Message',
  labelOnTop: true
}: 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date mg-c-input--label-on-top">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon icon="info-circle"></mg-icon>
          </mg-tooltip>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args {
  label: 'label',
  identifier: 'identifier',
  tooltip: 'My Tooltip Message',
  tooltipPosition: 'input',
  labelOnTop: true
}: 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date mg-c-input--label-on-top">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon icon="info-circle"></mg-icon>
          </mg-tooltip>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args {
  label: 'label',
  identifier: 'identifier',
  tooltip: 'My Tooltip Message',
  tooltipPosition: 'label'
}: 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon icon="info-circle"></mg-icon>
          </mg-tooltip>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args { label: 'label', identifier: 'identifier' }: 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args { label: 'label', identifier: 'identifier', labelHide: true }: 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title mg-u-visually-hidden">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args { label: 'label', identifier: 'identifier', labelOnTop: true }: 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date mg-c-input--label-on-top">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should render with args { label: 'label', identifier: 'identifier', readonly: true }: 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date mg-c-input--readonly">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
        </div>
      </mock:shadow-root>
      <b></b>
      <mg-input-title identifier="identifier" is-legend="false" readonly="true" required="false" slot="label">
        <!---->
        <span class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </span>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date Should trigger events 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date">
      <div id="identifier-help-text" slot="help-text">
        My help text
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date display error message with locale: fr 1`] = `
<mg-input-date lang="fr">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date mg-c-input--has-error">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text identifier-error" aria-invalid="true" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" required="" type="date">
      <div id="identifier-help-text" slot="help-text">
        Format attendu&nbsp;:
        <span aria-hidden="true">
          mm/jj/aaaa
        </span>
        <span class="mg-u-visually-hidden">
          m m / j j / a a a a
        </span>
        (ex&nbsp;: 12/24/2023)
      </div>
      <div id="identifier-error" slot="error">
        Ce champ est obligatoire.
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date display error message with locale: xx 1`] = `
<mg-input-date lang="xx">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date mg-c-input--has-error">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text identifier-error" aria-invalid="true" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" required="" type="date">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <div id="identifier-error" slot="error">
        This field is required.
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date display error with displayError component's public method 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" required="" type="date">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date display error with displayError component's public method 2`] = `
<mg-input-date>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date mg-c-input--has-error">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text identifier-error" aria-invalid="true" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" required="" type="date">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <div id="identifier-error" slot="error">
        This field is required.
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date should display override error with setError component's public method 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" required="" type="date">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date should display override error with setError component's public method 2`] = `
<mg-input-date>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" required="" type="date">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date should display override error with setError component's public method 3`] = `
<mg-input-date>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" required="" type="date">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date should display override error with setError component's public method 4`] = `
<mg-input-date>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date mg-c-input--has-error">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text identifier-error" aria-invalid="true" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" required="" type="date">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <div id="identifier-error" slot="error">
        Override error
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="true" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
          <span class="mg-c-input-title__required">
            <span class="mg-u-is-asterisk">
              *
            </span>
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date validity, case next state is disabled validity ({ validity: false, valueMissing: true, badInput: false }) 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date mg-c-input--has-error">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text identifier-error" aria-invalid="true" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <div id="identifier-error" slot="error">
        This field is required.
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date validity, case next state is disabled validity ({ validity: false, valueMissing: true, badInput: false }) 2`] = `
<mg-input-date>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date mg-c-input--disabled">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" disabled="" id="identifier" max="9999-12-31" name="identifier" type="date">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date validity, case next state is readonly validity ({ validity: false, valueMissing: true, badInput: false }) 1`] = `
<mg-input-date>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date mg-c-input--has-error">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text identifier-error" aria-invalid="true" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <div id="identifier-error" slot="error">
        This field is required.
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date validity, case next state is readonly validity ({ validity: false, valueMissing: true, badInput: false }) 2`] = `
<mg-input-date>
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date mg-c-input--readonly">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <b></b>
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="true" required="false" slot="label">
        <!---->
        <span class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </span>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date validity, case update min/max prop value value ({ value: '2024-01-01', max: '2024-02-01', next: '2024-03-01' }) 1`] = `
<mg-input-date value="2024-01-01">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date" value="2024-01-01">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date validity, case update min/max prop value value ({ value: '2024-01-01', max: '2024-02-01', next: '2024-03-01' }) 2`] = `
<mg-input-date value="2024-01-01">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date" value="2024-01-01">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date validity, case update min/max prop value value ({ value: '2024-01-01', max: '2024-02-01', next: '2024-03-01' }) 3`] = `
<mg-input-date value="2024-01-01">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="2024-02-01" name="identifier" type="date" value="2024-01-01">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date validity, case update min/max prop value value ({ value: '2024-01-01', max: '2024-02-01', next: '2024-03-01' }) 4`] = `
<mg-input-date value="2024-01-01">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="2024-03-01" name="identifier" type="date" value="2024-01-01">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date validity, case update min/max prop value value ({ value: '2024-01-01', min: '2024-02-01', next: '2024-01-01' }) 1`] = `
<mg-input-date value="2024-01-01">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date" value="2024-01-01">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date validity, case update min/max prop value value ({ value: '2024-01-01', min: '2024-02-01', next: '2024-01-01' }) 2`] = `
<mg-input-date value="2024-01-01">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date" value="2024-01-01">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date validity, case update min/max prop value value ({ value: '2024-01-01', min: '2024-02-01', next: '2024-01-01' }) 3`] = `
<mg-input-date value="2024-01-01">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date mg-c-input--has-error">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text identifier-error" aria-invalid="true" class="mg-c-input__box" id="identifier" max="9999-12-31" min="2024-02-01" name="identifier" type="date" value="2024-01-01">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <div id="identifier-error" slot="error">
        The date cannot be earlier than 2/1/2024
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date validity, case update min/max prop value value ({ value: '2024-01-01', min: '2024-02-01', next: '2024-01-01' }) 4`] = `
<mg-input-date value="2024-01-01">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" min="2024-01-01" name="identifier" type="date" value="2024-01-01">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date validity, case update min/max prop value value ({ value: '2024-03-01', max: '2024-02-01', next: '2024-03-01' }) 1`] = `
<mg-input-date value="2024-03-01">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date" value="2024-03-01">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date validity, case update min/max prop value value ({ value: '2024-03-01', max: '2024-02-01', next: '2024-03-01' }) 2`] = `
<mg-input-date value="2024-03-01">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date" value="2024-03-01">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date validity, case update min/max prop value value ({ value: '2024-03-01', max: '2024-02-01', next: '2024-03-01' }) 3`] = `
<mg-input-date value="2024-03-01">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date mg-c-input--has-error">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
          <div aria-live="assertive" class="mg-c-input__error">
            <slot name="error"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text identifier-error" aria-invalid="true" class="mg-c-input__box" id="identifier" max="2024-02-01" name="identifier" type="date" value="2024-03-01">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <div id="identifier-error" slot="error">
        The date cannot be later than 2/1/2024
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date validity, case update min/max prop value value ({ value: '2024-03-01', max: '2024-02-01', next: '2024-03-01' }) 4`] = `
<mg-input-date value="2024-03-01">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="2024-03-01" name="identifier" type="date" value="2024-03-01">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date validity, case update min/max prop value value ({ value: '2024-03-01', min: '2024-02-01', next: '2024-01-01' }) 1`] = `
<mg-input-date value="2024-03-01">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date" value="2024-03-01">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date validity, case update min/max prop value value ({ value: '2024-03-01', min: '2024-02-01', next: '2024-01-01' }) 2`] = `
<mg-input-date value="2024-03-01">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" name="identifier" type="date" value="2024-03-01">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date validity, case update min/max prop value value ({ value: '2024-03-01', min: '2024-02-01', next: '2024-01-01' }) 3`] = `
<mg-input-date value="2024-03-01">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" min="2024-02-01" name="identifier" type="date" value="2024-03-01">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;

exports[`mg-input-date validity, case update min/max prop value value ({ value: '2024-03-01', min: '2024-02-01', next: '2024-01-01' }) 4`] = `
<mg-input-date value="2024-03-01">
  <mock:shadow-root>
    <mg-input class="mg-c-input mg-c-input--date">
      <mock:shadow-root>
        <div class="mg-c-input__title">
          <slot name="label"></slot>
        </div>
        <div class="mg-c-input__input-container">
          <div class="mg-c-input__input">
            <slot></slot>
          </div>
          <div class="mg-c-input__help-text">
            <slot name="help-text"></slot>
          </div>
        </div>
      </mock:shadow-root>
      <input aria-describedby="identifier-help-text" aria-invalid="false" class="mg-c-input__box" id="identifier" max="9999-12-31" min="2024-01-01" name="identifier" type="date" value="2024-03-01">
      <div id="identifier-help-text" slot="help-text">
        Expected format:
        <span aria-hidden="true">
          mm/dd/yyyy
        </span>
        <span class="mg-u-visually-hidden">
          m m / d d / y y y y
        </span>
        (ex: 12/24/2023)
      </div>
      <mg-input-title identifier="identifier" is-legend="false" readonly="false" required="false" slot="label">
        <!---->
        <label class="mg-c-input-title" htmlfor="identifier">
          <span class="mg-c-input-title__text">
            label
          </span>
        </label>
      </mg-input-title>
    </mg-input>
  </mock:shadow-root>
</mg-input-date>
`;
